--- a/22083421_22079017_Client/src/main/resources/com/example/client/GUI.fxml
+++ b/22083421_22079017_Client/src/main/resources/com/example/client/GUI.fxml
@@ -32,7 +32,7 @@
       <DatePicker fx:id="datePicker" layoutX="67.0" layoutY="130.0" promptText="Pick date of class" visible="false" />
       <Button fx:id="submit1" layoutX="407.0" layoutY="185.0" mnemonicParsing="false" onAction="#submitAction1" text="Submit" visible="false" />
       <TextField fx:id="course" layoutX="360.0" layoutY="156.0" promptText="Enter course ID" visible="false" />
-      <Button fx:id="submit2" layoutX="315.0" layoutY="182.0" mnemonicParsing="false" onAction="#submit2" text="Submit" visible="false" />
-      <Button fx:id="submit3" layoutX="509.0" layoutY="182.0" mnemonicParsing="false" onAction="#submit3" text="Submit" visible="false" />
+      <Button fx:id="submit2" layoutX="315.0" layoutY="182.0" mnemonicParsing="false" onAction="#submitAction2" text="Submit" visible="false" />
+      <Button fx:id="submit3" layoutX="509.0" layoutY="182.0" mnemonicParsing="false" onAction="#submitAction3" text="Submit" visible="false" />
     </children>
 </AnchorPane>
